# trsAttack

./: .eslintrc.js  .gitignore  LICENSE  README.md  elect.js  index.html  package.json  tags
config/: index.js
data/sample/: roundKey.txt
data/txt/: roundKey.txt  waves.txt
learn/: jsfileop.html  sample_str_target.js  server.py  test_request_post.js
server/: CMakeLists.txt  CMakeLists.txt.backup  run_server.py
server/Alignment/: CMakeLists.txt  DTWAlignment.cpp  FFTAlignment.cpp  POCAlignment.cpp  alignment_factory.cpp  alignment_factory.h  alignment_method.cpp  alignment_method.h  complex.h  dtw.cpp  dtw.h  fft_method.cpp  fft_method.h  poc.cpp  poc.h  staticAlignment.cpp  staticalignment_method.cpp  staticalignment_method.h
server/Analysis/: CMakeLists.txt  CPAAnalysis.cpp  DPAAnalysis.cpp  analysis_factory.cpp  analysis_factory.h  analysis_method.cpp  analysis_method.h  cpa_method.cpp  cpa_method.h  dpa_method.cpp  dpa_method.h
server/Assessment/: CMakeLists.txt  README.md
server/Decode/: CMakeLists.txt  Convert.cpp  Convert.h  Decode.cpp  Decode.h
server/Kits/: Basic.cpp  Basic.h  CMakeLists.txt  parameter.cpp  parameter.h
server/Location/: CMakeLists.txt  differential_method.cpp  differential_method.h  location_factory.cpp  location_factory.h  location_method.cpp  location_method.h  nicv_method.cpp  nicv_method.h
server/Middle/: CMakeLists.txt  aes.cpp  aes.h  middle_factory.cpp  middle_factory.h  middle_method.cpp  middle_method.h  othersinput.cpp  othersinput.h  sms4.cpp  sms4.h
server/ServerCPP/: CMakeLists.txt  StatsEndpoint.cpp  StatsEndpoint.h
server/ServerCPP/examples/: http_server.cc  rest_description.cc  rest_server.cc
server/ServerCPP/test/: test_main.cpp
server/data/: AES_Tang_100.trs  Readme.txt  key.txt  table.txt  预处理函数说明文档.docx
server/lib/json/: value.h
server/test/: out.txt  test_server.py  variable.txt
src/: main.js  test.vue  trsapp.vue
src/components/: assessPanel.vue  attackPanel.vue  chooseFile.vue  fileTabs.vue  preProcessPanel.vue  reportPanel.vue  rowTracePanel.vue  selectWindow.vue  sidebar.vue  uploadingWindow.vue
src/components/attack/: attackPanel.vue
src/components/attack/cpa/: cpaCard.vue  cpaModal.vue  cpaShowModal.vue
src/components/attack/dpa/: dpaCard.vue
src/components/attack/mia/: miaCard.vue  miaModal.vue
src/components/basic/: rowNumberInput.vue
src/components/preProcess/: StaticAlignmentCard.vue  StaticAlignmentModal.vue  dtwCard.vue  dtwModal.vue  fftCard.vue  fftModal.vue  formatPostData.js  pocCard.vue  pocModal.vue  preProcessPanel.vue
src/components/preProcess/dtw/: dtwCard.vue  dtwModal.vue
src/components/preProcess/fft/: fftCard.vue  fftModal.vue
src/components/preProcess/poc/: pocModal.vue
src/components/preProcess/staticAlignment/: StaticAlignmentModal.vue
src/router/: index.js
src/store/: actions.js  getters.js  interfaceConfig.js  interfaceConfig.json  mutations.js  store.js
src/store/modules/: processes.js  targets.js  testTarget.json
src/test/: decode.js  singleTrace.js  traceData.js
src/util/: baseic.js  decode.js  echarts.js  http.js  localConfig.js  opFile.js  paint.js  processes.js  singleTrace.js  store.js  traceData.js  url.js
util/: file.js  plotly_test.js  test.html
